Refactoring things to alling with names in game. ( eg non fun change likely to cause bugs)

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -1,6 +1,6 @@
 {
 "_comment":"Blocks here",
-"block.tsrts.garrisonblock":"Garrison Block",
+"block.tsrts.barracksblock":"Barracks Block",
 "block.tsrts.archeryrangeblock":"Archery Range Block",
 "block.tsrts.minesiteblock":"Mine Site Block",
 
