Textures and Builder Names
Archery Range top textures added, and lang file updated to give all blocks and builder items legible names.

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -3,13 +3,27 @@
 "block.tsrts.barracksblock":"Barracks Block",
 "block.tsrts.archeryrangeblock":"Archery Range Block",
 "block.tsrts.minesiteblock":"Mine Site Block",
+"block.tsrts.farmblock":"Farm Block",
+"block.tsrts.lumberyardblock":"Lumber Yard",
+"block.tsrts.townhallblock":"Town Hall",
+
 
 "_comment":"Creative Tabs",
 "itemGroup.blocks":"TS RTS - Blocks",
 "itemGroup.weapons":"TS RTS - Weapons",
 
 "_comment":"Items here",
-"item.tsrts.sampleitem":"Sample item",
+"item.tsrts.sampleitem":"Command Saber",
+"item.tsrts.barracksbuilderitem":"Barracks",
+"item.tsrts.minesitediamondbuilderitem":"Diamond Mine",
+"item.tsrts.minesiteemeraldbuilderitem":"Emerald Mine",
+"item.tsrts.minesitegoldbuilderitem":"Gold Mine",
+"item.tsrts.minesiteironbuilderitem":"Iron Mine",
+"item.tsrts.minesitestonebuilderitem":"Stone Mine",
+"item.tsrts.townhallbuilderitem":"Town Hall",
+"item.tsrts.farmblockbuilderitem":"Farm",
+"item.lumberyardbuilderitem":"Lumber Yard",
+
 
 
 "_comment":"End here"
