--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -1,11 +1,11 @@
 {
 "_comment":"Blocks here",
-"block.tsrts.barracksblock":"Barracks Block",
-"block.tsrts.archeryrangeblock":"Archery Range Block",
-"block.tsrts.minesiteblock":"Mine Site Block",
-"block.tsrts.farmblock":"Farm Block",
-"block.tsrts.lumberyardblock":"Lumber Yard",
-"block.tsrts.townhallblock":"Town Hall",
+"block.tsrts.barracksblock":"Barracks Control Block",
+"block.tsrts.archeryrangeblock":"Archery Range Control Block",
+"block.tsrts.minesiteblock":"Mine Site Control Block",
+"block.tsrts.farmblock":"Farm Control Block",
+"block.tsrts.lumberyardblock":"Lumber Yard Control Block",
+"block.tsrts.townhallblock":"Town Hall Control Block",
 
 
 "_comment":"Creative Tabs",
@@ -22,7 +22,8 @@
 "item.tsrts.minesitestonebuilderitem":"Stone Mine",
 "item.tsrts.townhallbuilderitem":"Town Hall",
 "item.tsrts.farmblockbuilderitem":"Farm",
-"item.lumberyardbuilderitem":"Lumber Yard",
+"item.tsrts.lumberyardbuilderitem":"Lumber Yard",
+"item.tsrts.archeryrangebuilderitem":"Archery Range",
 
 
 
