--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -13,7 +13,7 @@
 "itemGroup.weapons":"TS RTS - Weapons",
 
 "_comment":"Items here",
-"item.tsrts.sampleitem":"Command Saber",
+"item.tsrts.sampleitem":"Command Scepter",
 "item.tsrts.barracksbuilderitem":"Barracks",
 "item.tsrts.minesitediamondbuilderitem":"Diamond Mine",
 "item.tsrts.minesiteemeraldbuilderitem":"Emerald Mine",
