--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -21,7 +21,7 @@
 "item.tsrts.minesiteironbuilderitem":"Iron Mine",
 "item.tsrts.minesitestonebuilderitem":"Stone Mine",
 "item.tsrts.townhallbuilderitem":"Town Hall",
-"item.tsrts.farmblockbuilderitem":"Farm",
+"item.tsrts.farmbuilderitem":"Farm",
 "item.tsrts.lumberyardbuilderitem":"Lumber Yard",
 "item.tsrts.archeryrangebuilderitem":"Archery Range",
 
