Fixes #31  With the rally point tool

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -14,6 +14,8 @@
 
 "_comment":"Items here",
 "item.tsrts.sampleitem":"Command Scepter",
+"item.tsrts.rallypointtool":"Rally Point Tool",
+
 "item.tsrts.barracksbuilderitem":"Barracks",
 "item.tsrts.minesitediamondbuilderitem":"Diamond Mine",
 "item.tsrts.minesiteemeraldbuilderitem":"Emerald Mine",
