fixes #55 adjusting color & localization support

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -30,7 +30,6 @@
 "_comment":"custom messages here",
 
 "tsrts.destroy.townhall":"Town Hall Destroyed!",
-
 "tsrts.destroy.archeryrange":"Archery Range Destroyed!",
 "tsrts.destroy.barracks":"Barracks Destroyed!",
 "tsrts.destroy.farm":"Farm Destroyed!",
@@ -38,7 +37,7 @@
 "tsrts.destroy.minesite":"Mine Site Destroyed!",
 "tsrts.destroy.researchcenter":"Research Center Destroyed!",
 "tsrts.destroy.stables":"Stables Destroyed!",
-
+"tsrts.alerttoast.alert":"Alert!",
 
 
 "_comment":"End here"
