--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -15,6 +15,7 @@
 "_comment":"Items here",
 "item.tsrts.sampleitem":"Command Scepter",
 "item.tsrts.rallypointtool":"Rally Point Tool",
+"item.tsrts.retreatescepteritem":"Retreat Scepter", 
 
 "item.tsrts.barracksbuilderitem":"Barracks",
 "item.tsrts.minesitediamondbuilderitem":"Diamond Mine",
