added lance, config for weapon modifiers, stables spawn mounted units etc.

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -16,6 +16,7 @@
 "item.tsrts.sampleitem":"Command Scepter",
 "item.tsrts.rallypointtool":"Rally Point Tool",
 "item.tsrts.retreatescepteritem":"Retreat Scepter", 
+"item.tsrts.lanceitem":"Lance",
 
 "item.tsrts.barracksbuilderitem":"Barracks",
 "item.tsrts.minesitediamondbuilderitem":"Diamond Mine",
