--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -17,6 +17,7 @@
 "item.tsrts.rallypointtool":"Rally Point Tool",
 "item.tsrts.retreatescepteritem":"Retreat Scepter", 
 "item.tsrts.lanceitem":"Lance",
+"item.tsrts.pikeitem":"Pike",
 
 "item.tsrts.barracksbuilderitem":"Barracks",
 "item.tsrts.minesitediamondbuilderitem":"Diamond Mine",
