lang for stables block

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -10,7 +10,7 @@
 "block.tsrts.watchtowerblock":"WatchTower Control Block",
 "block.tsrts.gateblock":"Gate Control Block",
 "block.tsrts.wallstepsblock":"Wall Tower Control Block",
-
+"block.tsrts.stablesblock":"Stables Block",
 
 "_comment":"Creative Tabs",
 "itemGroup.blocks":"TS RTS - Blocks",
