--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -12,6 +12,7 @@
 "block.tsrts.wallstepsblock":"Wall Tower Control Block",
 "block.tsrts.stablesblock":"Stables Block",
 "block.tsrts.watchblock":"Watch Block",
+"block.tsrts.researchcenterblock":"Research Center Block",
 
 "_comment":"Creative Tabs",
 "itemGroup.blocks":"TS RTS - Blocks",
