--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -40,6 +40,7 @@
 "item.tsrts.wallbuilderitem":"Wall",
 "item.tsrts.gatebuilderitem":"Gate",
 "item.tsrts.wallstepsbuilderitem":"Wall Tower",
+"item.tsrts.researchcenterbuilderitem":"Research Center",
 
 "_comment":"custom messages here",
 
