prevent players from attacking enemy buildings with weapons. They must use troops. added as a config option. default is to prevent them a from attacking

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -16,6 +16,9 @@
 "block.tsrts.researchcenterblock":"Research Center Block",
 "block.tsrts.siegeworkshopblock":"Siege Workshop Control Block",
 
+"_comment":"Feedback messages here",
+"message.attackingbuildingsasplayerdisabled":"Attacking enemy Buildings as a player is disabled on this server use your Troops!",
+
 "resourcevalues.food.name":"Food",
 "resourcevalues.wood.name":"Wood",
 "resourcevalues.stone.name":"Stone",
