--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -91,16 +91,16 @@
 "gui.research.minion.name":"Minions",
 "gui.research.townhall.name":"Town Hall",
 "gui.research.archer.name":"Archery",
-"gui.research.lancer.name":"Lances",
-"gui.research.pikeman.name":"Pikeman",
-"gui.research.armory.name":"Armory",
-"gui.research.mareketplace.name":"Mareketplace",
+"gui.research.lancer.name":"Cavalry",
+"gui.research.pikeman.name":"Polearms",
+"gui.research.armory.name":"Blacksmithing",
+"gui.research.mareketplace.name":"Commerce",
 "gui.research.wall.name":"Walls",
-"gui.research.siegeworkshop.name":"Siege Workshop",
+"gui.research.siegeworkshop.name":"Siege Warfare",
 "gui.research.crossbow.name":"Crossbows",
 "gui.research.advcedarmor.name":"Advanced Armor",
-"gui.research.watchtower.name":"Watch Tower",
-"gui.research.batteringrams.name":"Battering Rams",
+"gui.research.watchtower.name":"Watch Towers",
+"gui.research.batteringrams.name":"Battering Ram",
 "gui.research.trebuchet.name":"Trebuchet",
 
 
