--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -15,6 +15,8 @@
 "block.tsrts.watchblock":"Watch Block",
 "block.tsrts.researchcenterblock":"Research Center Block",
 "block.tsrts.siegeworkshopblock":"Siege Workshop Control Block",
+"block.tsrts.marketplaceblock":"Marketplace Control Block",
+
 
 "_comment":"Feedback messages here",
 "message.attackingbuildingsasplayerdisabled":"Attacking enemy Buildings as a player is disabled on this server use your Troops!",
@@ -60,6 +62,8 @@
 "item.tsrts.wallstepsbuilderitem":"Wall Tower",
 "item.tsrts.researchcenterbuilderitem":"Research Center",
 "item.tsrts.siegeworkshopbuilderitem":"Siege Workshop",
+"item.tsrts.marketplacebuilderitem":"Marketplace",
+
 
 "_comment":"custom messages here",
 
