fixing research bug preventing buying of the Knights & lang file correction for the armor research

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -115,7 +115,7 @@
 "gui.research.archer.name":"Archery",
 "gui.research.lancer.name":"Cavalry",
 "gui.research.pikeman.name":"Polearms",
-"gui.research.armor.name":"Blacksmithing",
+"gui.research.armor.name":"Armor",
 "gui.research.wall.name":"Walls",
 "gui.research.advcedarmor.name":"Advanced Armor",
 "gui.research.watchtower.name":"Watch Towers",
