create and enforce the area of influence on buildings closes #243

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -149,5 +149,8 @@ A building needed to make meele weapons and armor.",
 "gui.options.infinite.stables":"Stables queue infinite mode",
 "gui.options.infinite.siegeworkshop":"Siege Workshop queue infinite mode",
 
+
+"gui.overlay.in":"In",
+"gui.overlay.out":"Out",
 "_comment":"End here"
 }
