Lobby screen appearance Closes #244

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -152,5 +152,10 @@ A building needed to make meele weapons and armor.",
 
 "gui.overlay.in":"In",
 "gui.overlay.out":"Out",
+
+"gui.loby.name":"Name",
+"gui.loby.team":"Team",
+"gui.loby.ready":"Ready",
+
 "_comment":"End here"
 }
