--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -150,7 +150,7 @@ A building needed to make meele weapons and armor.",
 "gui.options.infinite.siegeworkshop":"Siege Workshop queue infinite mode",
 
 "gui.research.blacksmithing.description":"Unlocks: Armory
-A building needed to make meele weapons and armor.",
+A building needed to make melee weapons and armor.",
 
 
 "gui.eco.farm.description":"Generates food
