siege workshop work & sappers

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -177,7 +177,9 @@ Reserch Required: Archery",
 "gui.troopbuilding.stables.description":"Mounted troop production
 Types: Lancers
 Reserch Required: Cavalry",
-
+"gui.troopbuilding.siegeworkshop.description":"Siege troop & machine production
+Types: Sappers
+Reserch Required: Siege Workshop",
 
 "gui.miscbuildings.wall.description":"A fortification used to keep out the enemies
 Reserch Required: Walls",
