LongBowman and item setup

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -55,7 +55,7 @@
 "item.tsrts.retreatescepteritem":"Retreat Scepter", 
 "item.tsrts.lanceitem":"Lance",
 "item.tsrts.pikeitem":"Pike",
-
+"item.tsrts.longbowitem":"Longbow",
 "item.tsrts.armorybuilderitem":"Armory",
 "item.tsrts.barracksbuilderitem":"Barracks",
 "item.tsrts.minesitediamondbuilderitem":"Diamond Mine",
