Game optin Logic and networking added

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -250,8 +250,9 @@ Trained in: Barracks",
 
 
 
-"gui.options.option":"Options",
+"gui.options.option":"Game Options",
 "gui.options.speedeffect":"Player Speed Boost Amount:",
+"gui.options.weathercycle":"Weather Cycle:",
 
 "_comment":"End here"
 }
