--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -16,7 +16,7 @@
 "block.tsrts.researchcenterblock":"Research Center Block",
 "block.tsrts.siegeworkshopblock":"Siege Workshop Control Block",
 "block.tsrts.marketplaceblock":"Marketplace Control Block",
-
+"block.tsrts.templeblock":"Temple Control Block",
 
 "_comment":"Feedback messages here",
 "message.attackingbuildingsasplayerdisabled":"Attacking enemy Buildings as a player is disabled on this server use your Troops!",
@@ -75,7 +75,7 @@
 "item.tsrts.researchcenterbuilderitem":"Research Center",
 "item.tsrts.siegeworkshopbuilderitem":"Siege Workshop",
 "item.tsrts.marketplacebuilderitem":"Marketplace",
-
+"item.tsrts.templebuilderitem":"Temple",
 
 "_comment":"custom messages here",
 
@@ -113,6 +113,8 @@
 "gui.units.sapper":"Sapper",
 "gui.units.longbowmen":"Longbowmen",
 "gui.units.crossbowmen":"Crossbowmen",
+"gui.units.cleric":"Cleric",
+
 
 "gui.research.minion.name":"Minions",
 "gui.research.townhall.name":"Town Hall",
@@ -199,6 +201,9 @@ Reserch Required: Cavalry",
 "gui.troopbuilding.siegeworkshop.description":"Siege troop & machine production
 Types: Sappers
 Reserch Required: Siege Workshop",
+"gui.troopbuilding.temple.description":"With Faith Healing is possible
+Types: Cleric
+Reserch Required: Faith",
 
 "gui.miscbuildings.wall.description":"A fortification used to keep out the enemies
 Reserch Required: Walls",
@@ -245,7 +250,9 @@ Trained in: Barracks",
 Reserch Required: Advanced Armor
 Required Buildings: Armory
 Trained in: Barracks",
-
+"gui.troop.cleric.description":"A peaceful man of faith who can heal friendly troops
+Reserch Required: Faith
+Trained in: Temple",
 
 "gui.overlay.in":"In",
 "gui.overlay.out":"Out",
