Trebuchet item and spawning

--- a/src/main/resources/assets/tsrts/lang/en_us.json
+++ b/src/main/resources/assets/tsrts/lang/en_us.json
@@ -76,6 +76,7 @@
 "item.tsrts.siegeworkshopbuilderitem":"Siege Workshop",
 "item.tsrts.marketplacebuilderitem":"Marketplace",
 "item.tsrts.templebuilderitem":"Temple",
+"item.tsrts.trebuchetritem":"Trebuchet",
 
 "_comment":"custom messages here",
 
